--- a/gitindex.html
+++ b/gitindex.html
@@ -22,6 +22,6 @@
             <td>asdfasdf</td>
         </tr>
     </table>
-    <a href="https://www.google.com/search?q=google&sxsrf=AB5stBizBDDC64DM_2O170yrvRLFGR-HjQ%3A1689922258871&source=hp&ei=0iq6ZPj0MvrW2roP7omg6Ao&iflsig=AD69kcEAAAAAZLo44m8fMrXqN1zf-6AXSX73UxAQwSxK&ved=0ahUKEwj4pb7_mp-AAxV6q1YBHe4ECK0Q4dUDCAk&uact=5&oq=google&gs_lp=Egdnd3Mtd2l6IgZnb29nbGUyBxAjGIoFGCcyBxAjGIoFGCcyBxAjGIoFGCcyCxAuGIAEGMcBGNEDMgsQABiABBixAxiDATILEAAYgAQYsQMYgwEyCxAAGIAEGLEDGIMBMgsQABiABBixAxiDATILEAAYgAQYsQMYgwEyCxAAGIAEGLEDGIMBSLMKUPIDWJ4JcAF4AJABAJgBvwGgAfEGqgEDMC42uAEDyAEA-AEBqAIKwgIHECMY6gIYJ8ICERAuGIAEGLEDGIMBGMcBGNEDwgIFEAAYgAQ&sclient=gws-wiz">Heloo world</a>
+    <p>asdfasdfasdfsrrewqwerwe</p>
 </body>
 </html>
