add css file from link hub

--- a/gitindex.html
+++ b/gitindex.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,6 +23,7 @@
             <td>asdfasdf</td>
         </tr>
     </table>
-    <a href="https://www.google.com/search?q=google&sxsrf=AB5stBizBDDC64DM_2O170yrvRLFGR-HjQ%3A1689922258871&source=hp&ei=0iq6ZPj0MvrW2roP7omg6Ao&iflsig=AD69kcEAAAAAZLo44m8fMrXqN1zf-6AXSX73UxAQwSxK&ved=0ahUKEwj4pb7_mp-AAxV6q1YBHe4ECK0Q4dUDCAk&uact=5&oq=google&gs_lp=Egdnd3Mtd2l6IgZnb29nbGUyBxAjGIoFGCcyBxAjGIoFGCcyBxAjGIoFGCcyCxAuGIAEGMcBGNEDMgsQABiABBixAxiDATILEAAYgAQYsQMYgwEyCxAAGIAEGLEDGIMBMgsQABiABBixAxiDATILEAAYgAQYsQMYgwEyCxAAGIAEGLEDGIMBSLMKUPIDWJ4JcAF4AJABAJgBvwGgAfEGqgEDMC42uAEDyAEA-AEBqAIKwgIHECMY6gIYJ8ICERAuGIAEGLEDGIMBGMcBGNEDwgIFEAAYgAQ&sclient=gws-wiz">Heloo world</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum a sed dicta obcaecati qui officia adipisci minima voluptas unde perferendis expedita mollitia neque at vel, voluptatibus similique cum omnis. Assumenda?</p>
+    <a href="filelink.html">Heloo world</a>
 </body>
 </html>
